2008-03-21  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Document s2s_default_policy and
	s2s_host (EJAB-575)
	* doc/guide.html: Likewise

2008-03-21  Christophe Romain <christophe.romain@process-one.net>

	* src/pam/epam.erl: Seek epam binary into priv/bin (EJAB-573)
	* src/ejabberd.erl: Likewise
	* src/Makefile.in: Likewise
	* src/ejabberdctl.template: Likewise
	* tools/ejabberdctl: Likewise

	* src/mod_pubsub/mod_pubsub.erl: Pubsub subscription is now wrapped in
	pubsub tags (EJAB-580)

2008-03-21  Badlop  <badlop@process-one.net>

	* src/cyrsasl_digest.erl: Rewrite io:format calls to loglevel
	macros (EJAB-555)
	* src/ejabberd_auth.erl: Likewise
	* src/ejabberd_ctl.erl: Likewise
	* src/ejabberd_loglevel.erl: Likewise
	* src/ejabberd_s2s.erl: Likewise
	* src/ejabberd_sm.erl: Likewise
	* src/ejabberd_update.erl: Likewise
	* src/extauth.erl: Likewise
	* src/mod_irc/mod_irc.erl: Likewise
	* src/shaper.erl: Likewise
	* src/tls/tls.erl: Likewise
	* src/web/ejabberd_http_poll.erl: Likewise

	* src/ejabberd.hrl: New macro ?PRINT(Format, Args) to print in
	standard output

2008-03-20  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Improve explanation of how to start ejabberd when
	binary installer. Don't recommend R12 in Windows compilation.
	Describe what happens if maxrate shaper is exceeded.
	* doc/guide.html: Likewise

2008-03-20  Mickael Remond  <mremond@process-one.net>

	* src/eldap.erl: Improved logging. We now use ejabberd logging
	framework (EJAB-582).

	* src/eldap.erl: Faster LDAP reconnection (Thanks to Christophe
	Romain) (EJAB-581)
					 
2008-03-17  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_s2s.erl: Only trigger s2s_connect_hook on
	successful connection (EJAB-566)
	* src/ejabberd_s2s_out.erl: Likewise

2008-03-15  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_ctl.erl: API improvement: Added
	reopen_log_hook (EJAB-565)
	
	* src/ejabberd_s2s.erl: API improvement: Added s2s_connect_hook
	(EJAB-566).
